# Smart-assist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
api/: requirements.txt
app/: main.py
app/api/: auth.py  tasks.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/error/: custom_execption.py  register_handlers.py
app/models/: refresh_token.py  task.py  user.py
app/repositories/: task_repository.py  user_repository.py
app/schemas/: ai.py  task.py  token.py  user.py
app/services/: ai_service.py  auth_service.py  email_service.py  task_service.py  user_service.py
app/utlis/: cache.py  rate_limiter.py
app/utlis/mail_utils/: mail.py  url_safe_token.py
app/utlis/mail_utils/templates/: .gitkeep
static/: app.js  index.html  style.css
