[project]
name = "jwt-authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.135.1",
    "itsdangerous>=2.2.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-jose>=3.5.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "openai>=1.56.0",
    "psycopg2-binary>=2.9.9",
    "mangum>=0.17.0",
]
